apps/architecture-portal/versioned_docs/version-1.0.26.0/overview/index.mdx
---
id: index
slug: /
title: LMDJ 产品说明书
area: overview
status: partial
owners: [product, core]
source_paths:
  - products/lmdj/assembly.lock.json
  - docs/superpowers/specs/2026-08-07-lmdj-stage7-creator-editor-design.md
  - docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md
  - docs/prd/decision-log.md
  - docs/superpowers/specs/2026-07-30-lmdj-playable-beat-instrument-core-redesign.md
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {SectionCards} from '@site/src/components/SectionCards';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity />

LMDJ 的产品方向是 **64-Pad Playable Beat Instrument**。当前仓库在 Product Build `1.0.26.0` 装配 Native complete-read 替换竞态修复级联，不新增公开产品能力。Product Build `1.0.25.0` 曾装配 G2 evidence-durability 级联。Product Build `1.0.24.0` 曾装配 Creator Web Host `1.3.1`、Formal Web Runtime Host `1.2.10` 与共享 Web Runtime Platform `0.3.1`。Creator 已提供本地 Project discovery/open、portable Bundle import、PCM16 WAV import/replace、真实波形与 per-Pad Start/End、四种触发模式、Mute、Volume、Reset、麦克风 Pad Capture 和共享 Runtime 试听；空白 Project 创建、Bundle 导出、Sequence 编辑、生产/云 Provider、离线安装和物理设备验收仍按各自页面的门禁推进。

:::info[构建身份]
上方 Build Identity 会明确标出本页属于随 `main` 演进的 current 说明书，还是某个 Product Build 的不可变正式快照；版本下拉菜单用于在两类证据之间切换。
:::

## 全产品架构

<DiagramFrame title="LMDJ 全产品架构" diagramId="lmdj-product" />

Project Truth 是权威创作状态；Runtime Snapshot 是不可变派生状态；Host 只通过 Application Facade 使用 Core；Provider 只接收 Artifact 输入和输出 sink；产品专属装配只存在于 Product Assembly。

## 导览

<SectionCards items={[
  {title: '产品', description: '定位、能力边界与核心工作流。', docId: 'product/positioning', status: 'partial'},
  {title: 'Core Modules', description: '八个产品中立模块及其依赖。', docId: 'core/modules/foundation', status: 'implemented'},
  {title: 'Hosts', description: 'CLI、MCP、Native、Diagnostic Web 与 Creator Web。', docId: 'hosts/overview', status: 'partial'},
  {title: 'Providers', description: '能力发现、Attempt 与 Proof Provider。', docId: 'providers/overview', status: 'partial'},
  {title: 'Contracts', description: '跨语言边界和不可变运行态。', docId: 'contracts/overview', status: 'implemented'},
  {title: 'Assembly', description: 'LMDJ 产品组合与版本身份。', docId: 'assembly/lmdj', status: 'implemented'},
  {title: 'Platform', description: '音频、Web、存储和输入适配。', docId: 'platform/native-audio', status: 'partial'},
  {title: 'Operations', description: 'Proof、版本发布与文档治理。', docId: 'operations/testing-and-proof', status: 'implemented'},
  {title: 'History', description: '已退役架构，仅供迁移追溯。', docId: 'history/legacy-patch-architecture', status: 'retired'},
]} />

## 当前交付状态

- **已实现**：八个 Core Module、五个 Assembly-listed Host、两个本地 Proof Provider、八个 active Contract 与 LMDJ Assembly；Creator 已覆盖 Project workspace、portable import、Sample Editor、Pad Capture、64 Pad Runtime surface 和共享 Runtime 壳。
- **部分实现**：原生音频与 Web 物理设备体验；Web Runtime Lab 仍是独立实验工具，不是正式 Host。
- **已设计/规划中**：Sequence 编辑、素材智能、生产/云 Provider、离线安装与正式部署。
- **已退役**：旧 Patch/Materials 架构只保留在 History，active source 不得依赖。

## 文档与证据规则

页面状态必须由 `source_paths`、测试或已批准决策支持。Product Build、Module/Host/Provider/Contract 版本和 Git revision 均从仓库清单生成，作者不手填。
